Fix modal spacing on large modal

--- a/packages/web-components/src/components/va-modal/va-modal.scss
+++ b/packages/web-components/src/components/va-modal/va-modal.scss
@@ -221,6 +221,7 @@ h1 {
   padding-right: 0;
   width: 100%;
   vertical-align: middle;
+  margin: inherit;
 }
 
 .va-modal-alert-title {
